--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+#user ignore
+.cordova
+hooks
+platforms
+
 # Windows Installer files
 *.cab
 *.msi
@@ -26,8 +31,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 # Thumbnails
 ._*
 
